# ReLERNN

./: .gitignore  CLAUDE.md  README.md  pixi.toml  pyproject.toml  setup.py
.github/workflows/: test.yml
ReLERNN/: ReLERNN_BSCORRECT  ReLERNN_PREDICT  ReLERNN_PREDICT_POOL  ReLERNN_TRAIN  ReLERNN_TRAIN_POOL  helpers.py  imports.py  networks.py  npy_to_tfrecord.py  sequenceBatchGenerator.py  simulator.py
examples/: example_pipeline.sh
tests/: test_batch_generator.py  test_helpers.py  test_simulator.py
